# context

./: CMakeLists.txt  package.xml  readme.md  setup.py
.github/workflows/: python_mypy.yml
ball_trajectories/: 20200205-181101.json  20200205-181134.json  20200205-181218.json  20200205-181251.json  20200205-181302.json  20200205-181346.json  20200205-181357.json  20200205-181409.json  20200205-181431.json  20200205-181515.json  20200205-181537.json  20200205-181548.json  20200205-181559.json  20200205-181632.json  20200205-181716.json  20200205-181749.json  20200205-182119.json  20200205-182141.json  20200205-182214.json  20200205-182225.json  20200205-182309.json  20200205-182353.json  20200205-182404.json  20200205-182415.json  20200205-182426.json  20200205-182437.json  20200205-182511.json  20200205-182522.json  20200205-182544.json  20200205-182555.json  20200205-182628.json
include/context/: ball.hpp  contact_information.hpp  coordinates.hpp  low_pass_filter.hpp  low_pass_filter.hxx  rotation.hpp  state.hpp  transform.hpp  velocity_compute.hpp
python/context/: __init__.py  ball_status.py  ball_trajectories.py  hit_point.py
python/context/trajectories/: 20200205-181112.json  20200205-181123.json  20200205-181156.json  20200205-181313.json  20200205-181324.json  20200205-181420.json  20200205-181526.json  20200205-181621.json  20200205-181800.json  20200205-181822.json  20200205-181918.json  20200205-181929.json  20200205-181940.json  20200205-181951.json  20200205-182002.json  20200205-182013.json  20200205-182035.json  20200205-182152.json  20200205-182236.json  20200205-182342.json  20200205-182459.json
src/: ball.cpp  contact_information.cpp  low_pass_filter.cpp  rotation.cpp  state.cpp  transform.cpp  velocity_compute.cpp
srcpy/: wrappers.cpp
tests/: unit_tests.cpp  unit_tests.py
trajectories/: 20200205-181028.json  20200205-181050.json  20200205-181145.json  20200205-181229.json  20200205-181453.json  20200205-181504.json  20200205-181705.json  20200205-181727.json  20200205-181738.json  20200205-181811.json  20200205-182024.json  20200205-182057.json  20200205-182108.json  20200205-182130.json  20200205-182203.json  20200205-182320.json  20200205-182331.json  20200205-182533.json  20200205-182606.json  20200205-182617.json  20200205-182639.json  where_the_files_are.txt
