<?xml version="1.0"?>
<package>
  <name>context</name>
  <version>1.0.0</version>
  <description>encapsulating of experiement informations</description>
  <author email="vincent.berenz@tuebingen.mpg.de">Vincent Berenz</author>
  <maintainer email="vincent.berenz@tuebingen.mpg.de">Vincent Berenz</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pybind11_catkin</build_depend>
  <build_depend>shared_memory</build_depend>

  <run_depend>pybind11_catkin</run_depend>
  <run_depend>shared_memory</run_depend>

  <export>
  </export>
</package>
