<?xml version="1.0"?>
<package format="2">
  <name>context</name>
  <version>1.0.0</version>
  <description>encapsulating of experiement informations</description>
  <author email="vincent.berenz@tuebingen.mpg.de">Vincent Berenz</author>
  <maintainer email="vincent.berenz@tuebingen.mpg.de">Vincent Berenz</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>pybind11_catkin</depend>
  <depend>shared_memory</depend>
  <depend>mpi_cmake_modules</depend>
  
  <export>
  </export>
</package>
